# docs/swagger.yaml
@@ -93,7 +93,7 @@ paths:
                 $ref: '#/components/schemas/loginSuccessful'
         '400':
           description: Invalid username or password
-        '401':
+        '403':
           description: Usuario esta blockeado
   '/users/login/admin':
     'post':
@@ -116,7 +116,7 @@ paths:
                 $ref: '#/components/schemas/loginSuccessful'
         '400':
           description: Invalid username or password
-        '451':
+        '401':
           description: Usuario no existe o no es administrador
   '/users/change-password':
     'patch':
